# bioCube_hwts

./: .gitattributes  README.md  pubspec.yaml
android/: build.gradle
android/app/: CMakeLists.txt  build.gradle  private_key.pepk  proguard-rules.pro
android/app/libs/: passlib-release.aar
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: FaceCubePlus.cpp  FaceCubePlus.h  detector.cpp  detector.h  native_opencv.cpp  recognizer.cpp  recognizer.h
android/app/src/main/kotlin/com/example/hwst/: MainActivity.kt  PassKitService.kt
android/app/src/main/res/values/: strings.xml
android/app/src/main/res/xml/: apduservice.xml
android/app/src/profile/: AndroidManifest.xml
assets/i18n/: ar-SA.json  fr-FR.json  ko-KR.json  zh-CN.json  zh-TW.json
assets/mnn/: FaceCubePlusDetect.mnn
ios/: PassLib-Swift.h  Podfile  passController.h  passController.m
ios/Runner/: AppDelegate.swift  Info.plist  Runner-Bridging-Header.h
ios/Runner.xcodeproj/: project.pbxproj
lib/: bioCubeApp.dart  main.dart  router.dart
lib/buildConfig/: biocube_build_config.dart
lib/enums/: app_theme_type.dart  check_box_type.dart  drawer_icon_type.dart  hive_box_type.dart  image_type.dart  input_icon_type.dart  language_type.dart  locaiton_permission_type.dart  offset_direction_type.dart  popup_list_type.dart  popup_search_type.dart  record_status.dart  request_type.dart  signin_type.dart  slider_type.dart  string_fomate_type.dart  swich_type.dart  verify_type.dart
lib/globalProvider/: app_theme_provider.dart  auth_provider.dart  connect_status_provider.dart  core_verify_process_provider.dart  device_status_provider.dart  face_detection_provider.dart  home_start_button_provider.dart  next_page_loading_provider.dart  timer_provider.dart
lib/service/: api_service.dart  cache_service.dart  connect_service.dart  deviceInfo_service.dart  firebase_service.dart  hive_service.dart  key_service.dart  local_file_servicer.dart  location_service.dart  pass_kit_service.dart  (+6 more)
(+118 files in other folders)
